--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Django==5.2.1
 django-filter==25.1
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
+drf-nested-routers==0.94.2
 pillow==11.2.1
 psycopg2-binary==2.9.10
 PyJWT==2.9.0
