--- a/social-media-app/package.json
+++ b/social-media-app/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.9.0",
+    "axios-auth-refresh": "^3.3.6",
     "bootstrap": "^5.3.6",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
